changed react-native-barcodescanner dependencies

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/applean/react-native-barcode-scanner-universal#readme",
   "dependencies": {
-    "react-native-barcodescanner": "cpunion/react-native-barcodescanner#patch-1",
+    "react-native-barcodescanner": "https://github.com/narendrabagade/react-native-barcodescanner.git",
     "react-native-camera": "lwansbrough/react-native-camera#bff819c574eb60a1ffdb664aa2b03d9d15c57c28"
   }
 }
